apps/jellyfin/manifests/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
  namespace: jellyfin
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
