apps/jellyfin/manifests/10-ingressroute-jellyfin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.minh.pw`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
