apps/jellyfin/manifests/20-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jellyfin.minh.pw`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
